@@ -4,7 +4,7 @@ Release history for Text::FormBuilder.
     * marked Parse::RecDescent as an explicit dependency
     * added a single-quoted string to the grammar that
       can be used in the labels and default values to include
-      characters in [^\w\t ]
+      characters not in [\w\t ]
     * generated code leaves out overwrriten options
     * allow option lists to have simple multiword and quoted
       string values
@@ -13,6 +13,8 @@ Release history for Text::FormBuilder.
       sub-tables with their own ids and captions
     * fall through to CGI::FormBuilder builtin option lists
       if @LIST does not match a list directive
+    * customizable messages similar to CGI::FormBuilder
+    * customizable charset for the generated HTML page
     
 0.05 -  9 Nov 2004
     * First CPAN release
